# rust-gemm

./: Cargo.toml  README.md  build.rs
src/: main.rs  vector_dot.c
